@@ -1,4 +1,5 @@
 0.03
+ - Rewrite implicit encode() to Encode::encode().
  - Update README.
 
 0.02 2021-02-20T12:16:20+01:00
